#
# add_subdirectory( world )
#
# obsolete!!! add_subdirectory( DataProd )
#
add_subdirectory( G4Components )
add_subdirectory( G4Services )
#
# obsolete !!! add_subdirectory( ApplicationBase )
#
add_subdirectory( ApplicationModules )
#
# obsolete !!! add_subdirectory( Toys )
#
add_subdirectory( RooMUTools )
add_subdirectory( AnalysisBase )
add_subdirectory( AnalysisModules )
